<resources>
    <string name="title_details_screen">Details</string>
    <string name="title_pharmacies_list_screen">NearBy Pharmacies</string>
    <string name="title_register_pharmacy_screen">Pharmacy Registration</string>
    <string name="title_update_pharmacy_screen">Update Profile</string>
    <string name="title_register_user_screen">User Registration</string>
    <string name="title_update_user_screen">Update Profile</string>
    <string name="title_sign_in_screen">Sign In</string>
    <string name="title_search_screen">Search</string>
    <string name="title_edit_cart_message_screen">Edit Message</string>
    <string name="title_about_us_screen">About Us</string>
    <string name="title_disclaimers_screen">Terms and Disclaimers</string>
    <string name="title_cart_screen">Cart</string>
    <string name="title_orders_list_screen">Orders</string>
    <string name="title_order_detail_screen">Order Details</string>
    <string name="title_forgot_password_screen">Forgot Password</string>
    <string name="title_forgot_new_screen">Change Password</string>
    <string name="title_settings_screen">Settings</string>
    <string name="title_help_screen">Help</string>
    <string name="title_place_order_screen">Place Order</string>
    <string name="title_category_select_screen">Register As</string>
    <string name="title_emergency_numbers_screen">Emergency Numbers</string>
    <string name="title_dashboard_pharmacy_screen">Dashboard</string>
    <string name="title_graphical_stats_screen">Statistics</string>
    <string name="title_code_verification_screen">Code Verification</string>
    <string name="title_promotions_list_screen">Promotions</string>
    <string name="title_create_promotions_screen">Create Promotion</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="category_select_text">Please select your category to register.</string>
    <string name="search_medicine_cart"><u>Search Medicine</u></string>
    <string name="web_search_medicine"><u>More Information</u></string>
    <string name="select_pharmacy"><u>Select Pharmacy</u></string>
    <string name="terms_disclaimers_title"><![CDATA[Terms & Disclaimers]]></string>
    <string name="nearest_pharmacy_text">Please select your pharmacy from the list below or create a new pharmacy…</string>
    <string name="not_found_pharmacy_button">Create New Pharmacy</string>
    <string name="sign_in_code_verification_text">You are signed in on another device. Please enter the code sent to your email to authorize this device.</string>
    <string name="clear_cart_dialog_title">Order Placed</string>
    <string name="clear_cart_dialog_message">Do you want to clear the cart ?</string>
    <string name="clear_cart_dialog_button1">No</string>
    <string name="clear_cart_dialog_button2">Yes</string>
    <string name="confirm_order_dialog_title">Please Confirm Order</string>
    <string name="confirm_order_dialog_message">Please select the type of order you want to place ?</string>
    <string name="confirm_order_dialog_type_1">Pick Up</string>
    <string name="confirm_order_dialog_type_2">Delivery</string>
    <string name="confirm_order_dialog_button_1">Cancel</string>
    <string name="confirm_order_dialog_button_2">Confirm</string>
    <string name="delete_items_dialog_title">Delete Item(s)</string>
    <string name="delete_items_dialog_message">Delete the selected cart item(s) ?</string>
    <string name="delete_items_dialog_button_1">No</string>
    <string name="delete_items_dialog_button_2">Yes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tray_notification_color">#ffffff</string>
    <string name="aboutUs">
    <![CDATA[
        <html>
            <head></head>
            <body style="text-align:justify;color:black;font-size:16px">

                <p>In this age of Information Technology every consumer and business corporation are dependent on the way how information flows rapidly, securely and surely.</p>
                <p>PHARMED is developed with the commitment to provide better service towards consumer and retail pharmacy community with seamless flow of information.</p>
                <p>The PHARMED is developed to facilitate users on following location-based services:</p>
                    <ul>
                        <li>Find licensed and approved nearby and distant pharmacies</li>
                        <li>Locate, Select and Connect a Pharmacy via Phone / SMS and/or using Google map</li>
                        <li>Search and place order for selected medicines</li>
                        <li>Repeat medicine for processed orders</li>
                        <li>Order tracking and management both at consumer and retailer level</li>
                    </ul>
                <p>PHARMED also provide users a facility to find the Pharmacies anywhere around the world by moving their Pin on the map and dropping the pin at the location of their choice.</p>
                <p>PHARMED provides a feature for any Pharmacy owner to create their account and add their Pharmacy(s) in PHARMED database for consumers reach.</p>
                <p>PHARMED provides a clear design & a user friendly Interface to make the best use of it during emergencies and general situations, without incurring any extra costs to the users.</p>
            </body>
        </html>
    ]]>
    </string>
    <string name="aboutUsNight">
    <![CDATA[
        <html>
            <head></head>
            <body style="text-align:justify;color:white;font-size:16px">

                <p>In this age of Information Technology every consumer and business corporation are dependent on the way how information flows rapidly, securely and surely.</p>
                <p>PHARMED is developed with the commitment to provide better service towards consumer and retail pharmacy community with seamless flow of information.</p>
                <p>The PHARMED is developed to facilitate users on following location-based services:</p>
                    <ul>
                        <li>Find licensed and approved nearby and distant pharmacies</li>
                        <li>Locate, Select and Connect a Pharmacy via Phone / SMS and/or using Google map</li>
                        <li>Search and place order for selected medicines</li>
                        <li>Repeat medicine for processed orders</li>
                        <li>Order tracking and management both at consumer and retailer level</li>
                    </ul>
                <p>PHARMED also provide users a facility to find the Pharmacies anywhere around the world by moving their Pin on the map and dropping the pin at the location of their choice.</p>
                <p>PHARMED provides a feature for any Pharmacy owner to create their account and add their Pharmacy(s) in PHARMED database for consumers reach.</p>
                <p>PHARMED provides a clear design & a user friendly Interface to make the best use of it during emergencies and general situations, without incurring any extra costs to the users.</p>
            </body>
        </html>
    ]]>
    </string>
</resources>