<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cart_clean_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="30dp"
    android:padding="10dp"
    android:background="@drawable/pd_background_et_round">

    <TextView
        android:id="@+id/pd_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/clear_cart_dialog_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/pd_dialog_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_cart_dialog_message"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/pd_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/send_others"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/pd_dialog_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clean"
        android:text="@string/clear_cart_dialog_button1"
        android:textColor="@color/white"
        android:background="@drawable/pd_background_button_dialog_cancel"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/clean"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/pd_dialog_message"
        app:layout_constraintStart_toEndOf="@id/send_others"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/clear_cart_dialog_button2"
        android:textColor="@color/white"
        android:background="@drawable/pd_background_button_dark"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:padding="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>