<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirm_order_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="30dp"
    android:padding="10dp"
    android:background="@drawable/pd_background_et_round">

    <TextView
        android:id="@+id/pd_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm_order_dialog_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/pd_dialog_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order_dialog_message"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/pd_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <RadioGroup
        android:id="@+id/types_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/pd_dialog_message"
        android:gravity="center"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/type_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_dialog_type_1" />

        <RadioButton
            android:id="@+id/type_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_dialog_type_2"
            android:checked="true"
            android:layout_marginStart="60dp"/>

    </RadioGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/types_radio_group"
        app:layout_constraintBottom_toTopOf="@id/select_address_label"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/select_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/types_radio_group"
        android:text="Please select the address you want to deliver to."
        android:textSize="17sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/addresses_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/select_address_label">

<!--        <RadioButton-->
<!--            android:id="@+id/address_1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Address 1" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/address_2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Address 2"/>-->
    </RadioGroup>

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/addresses_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm"
        android:text="@string/confirm_order_dialog_button_1"
        android:textColor="@color/white"
        android:background="@drawable/pd_background_button_dialog_cancel"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm_order_dialog_button_2"
        android:textColor="@color/white"
        android:background="@drawable/pd_background_button_dark"
        android:layout_marginStart="5dp"
        android:padding="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>